--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ h3 {
 .person {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 20px;
   margin-bottom: 10px;
 }
